[metadata]
name = pyspark_gcs
author = Rafal Wojdyla
license = Apache
description =  pyspark with GCS batteries
long_description_content_type=text/x-rst
long_description =
	pyspark_gcs enables GCS connector for pyspark
	without the need to manage GCS connector jars etc.
url = https://github.com/ravwojdyla/pyspark_gcs
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = pyspark_gcs
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires =
    pyspark
setup_requires =
    setuptools >= 41.2
    setuptools_scm

[flake8]
ignore =
    E203
    E402
    E501
    E731
    W503

[isort]
profile = black
default_section = THIRDPARTY
known_third_party = _pytest,pyspark,pytest,setuptools
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy-pyspark.*,setuptools.*,pytest.*,_pytest.*]
ignore_missing_imports = True
